--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cloudinary/react": "^1.0.0-beta.14",
+    "@cloudinary/url-gen": "^1.3.0",
     "@craco/craco": "^6.4.2",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
+    "cloudinary-react": "^1.7.0",
     "date-fns": "^2.26.0",
     "firebase": "^8.2.5",
     "react": "^17.0.2",
@@ -14,12 +18,13 @@
     "react-loading-skeleton": "^3.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "uuidv4": "^6.2.12",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "craco start",
     "build": "craco build",
-     "test": "craco test",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
